bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value getIndication
  if(getIndication == "R"){
     ^BDR:6: error: not found: value getIndication
  }else if(getIndication == "L"){
           ^BDR:9: error: not found: value getIndication
  }else if(getIndication == "I"){
           ^BDR:13: error: not found: value getIndication
  }else if(getIndication == "A"){
           ^BDR:15: error: not found: value getIndication
  }else if(getIndication == "B"){
           ^BDR:18: error: not found: value getIndication
  }else if(getIndication == "C"){
           ^BDR:22: error: not found: value getIndication
  }else if(getIndication == "Z"){
           ^BDR:24: error: not found: value getIndication
  }else if(getIndication == "Y"){
           ^BDR:27: error: not found: value getIndication
  }else if(getIndication == "X"){
           ^BDR:31: error: not found: value getIndication
  }else if(getIndication == ""){
           ^